--- a/index.html
+++ b/index.html
@@ -535,13 +535,14 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form class="cta-form" action="#">
+              <form class="cta-form" name="sign-up"  netlify>
                 <div>
                   <label for="full-name">Full name</label>
                   <input
                     id="full-name"
                     type="text"
                     placeholder="John smith"
+                    name="full-name"
                     required
                   />
                 </div>
@@ -552,12 +553,13 @@
                     id="email"
                     type="email"
                     placeholder="me@example.com"
+                    name="email"
                     required
                   />
                 </div>
                 <div>
                   <label for="select-where">Where did you hear from us</label>
-                  <select id="select-where">
+                  <select id="select-where" name="Select-where">
                     <option value="e">Please choose one opttion</option>
                     <option value="frinds">family and friends</option>
                     <option value="ad">Facebook add</option>
